# django-extra-settings

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  create-release.yml  pre-commit-autoupdate.yml  pythonpackage.yml  test-package.yml
extra_settings/: __init__.py  admin.py  apps.py  cache.py  fields.py  forms.py  metadata.py  models.py  settings.py  signals.py  test.py  translation.py  utils.py  version.py
extra_settings/locale/en/LC_MESSAGES/: django.mo  django.po
extra_settings/locale/es/LC_MESSAGES/: django.mo  django.po
extra_settings/locale/it/LC_MESSAGES/: django.mo  django.po
extra_settings/locale/ru/LC_MESSAGES/: django.mo  django.po
extra_settings/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
extra_settings/management/commands/: reset_extra_settings.py
extra_settings/migrations/: 0001_initial.py  0002_auto_20200826_1714.py  0003_modified_upload_to.py  0004_setting_description.py  0005_setting_value_json_alter_setting_value_type.py  0006_alter_setting_id.py  0006_setting_validator.py  0007_alter_settings_validator.py  0008_auto_20221024_0717.py  0009_alter_setting_value_file_alter_setting_value_image.py  0009_alter_value_json.py  0009_setting_value_password_alter_setting_value_type.py  1001_initial_squashed_0009.py
extra_settings/static/extra_settings/css/: extra_settings.css
extra_settings/static/extra_settings/js/: extra_settings.js
extra_settings/templates/extra_settings/: changelist.html
extra_settings/templatetags/: extra_settings.py
tests/: settings.py  test_admin.py  test_cache.py  test_forms.py  test_metadata.py  test_models.py  test_override_settings.py  test_templatetags.py  test_validators.py  urls.py
