[metadata]
name = django-extra-settings
version = 0.7.0
author = Fabio Caccamo
author_email = fabio.caccamo@gmail.com
description = easily manage typed extra settings using the django admin.
keywords =
    django
    admin
    extra
    settings
    options
    conf
    config
    editable
    custom
    dynamic
    typed
    constance
url = https://github.com/fabiocaccamo/django-extra-settings
download_url = https://github.com/fabiocaccamo/django-extra-settings/archive/0.7.0.tar.gz
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Build Tools
requires = django (>= 2.2)
project_urls =
    Documentation = https://github.com/fabiocaccamo/django-extra-settings#readme
    Issues = https://github.com/fabiocaccamo/django-extra-settings/issues
    Funding = https://github.com/sponsors/fabiocaccamo/
    Twitter = https://twitter.com/fabiocaccamo

[options]
packages = find:
install_requires = jsonfield >= 3.0.0
include_package_data = True

[options.packages.find]
exclude = contrib; docs; tests*
